--- a/templates/three.html
+++ b/templates/three.html
@@ -6,28 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Random Pet Generator </title>
-    <style>
-        body {
-            text-align: center;
-            font-family: cursive;
-        }
-        button {
-            font-family: cursive;
-            font-size: 200%;
-            padding: 10px 50px;
-            border: 4mm ridge rgb(96 125 139 / 69%);
-            background: #9e9e9e73;
-        }
-        figcaption{
-            font-size: 200%;
-
-        }
-        img {
-            max-width: 100%;
-            height: auto;
-        }
-    </style>
-
+    <link rel="stylesheet" href="static/css/styles.css">
 </head>
 <body>
 <h1>Random Pet Generator</h1>
@@ -42,7 +21,7 @@
 
 </figure>
 
-<a href="/three">
+<a class="button" href="/three">
     Another!
 </a>
 </body>
