--- a/templates/three.html
+++ b/templates/three.html
@@ -11,6 +11,8 @@
 <body>
 <h1>Random Pet Generator</h1>
 
+{% include 'nav.html' %}
+
 <figure>
     <img id="pet-image" src="{{ image }}" alt="{{ imageAlt }}">
 
